--- a/SistemaWebEmpleado/appsettings.json
+++ b/SistemaWebEmpleado/appsettings.json
@@ -6,5 +6,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "KeyDBEmpleados": "Data Source=.\\sqlexpress02;Initial Catalog=DbEmpleados2;Integrated Security=True"
+  }
+}
 }
